--- a/dashboards/layout.erb
+++ b/dashboards/layout.erb
@@ -35,6 +35,10 @@
     <script type="application/javascript">
       $(function(){
 
+        var failureOverlay = $('#overlay');
+        var failureOverlayContent = $('#overlay-content');
+        var alertsDiv = $('#alerts');
+
         var alertAudio = document.getElementById('audio');
         var fixedAudio = document.getElementById('green');
 
@@ -59,7 +63,7 @@
         };
 
         $.fn.showScrollingAlert = function(failingMonitors){
-          var alertsDiv = $('#alerts');
+
           alertsDiv.css('display', 'inline-block');
           var alertsMarquee = alertsDiv.find('marquee');
           // Remove alert contents
@@ -76,11 +80,8 @@
         };
 
         $.fn.hideScrollingAlert = function(){
-          $('#alerts').css('display', 'none');
+          alertsDiv.css('display', 'none');
         };
-
-        var failureOverlay = $('#overlay');
-        var failureOverlayContent = $('#overlay-content');
 
         $.fn.showFailureDashboard = function(failingMonitors){
           if (alertAudio.paused) {
@@ -113,7 +114,7 @@
             $.fn.showScrollingAlert(failingMonitors);
             $.fn.showFailureDashboard(failingMonitors);
           } else {
-            if(failureOverlay.is(':visible') && $('#alerts').is(':visible')) { // Only hide alerts when they are visible
+            if(failureOverlay.is(':visible') && alertsDiv.is(':visible')) { // Only hide alerts when they are visible
               $.fn.hideScrollingAlert();
               $.fn.hideFailureDashboard();
             }
