OMP-1088: Moved scrolling alerts to proper coffeescript, Fixed failure details info

--- a/dashboards/one-membership.erb
+++ b/dashboards/one-membership.erb
@@ -31,9 +31,11 @@
     <li data-row="2" data-col="1" data-sizex="1" data-sizey="1" onclick="window.open('http://healthcheck.ft.com/service/2e770914bca342d7bf9d8589efb29539', '_blank');">
       <div data-id="usr-product-svc-us" data-text="Impact: User subscription status not retrievable. May have access issues." data-view="Onemembership" data-title="User Product Service (USA)" data-moreinfo="usr-product-svc-useast1-prod.memb.ft.com" data-suffix="%"></div>
     </li>
+
   </ul>
   <ul>
     <h4>Nagios Checks</h4>
   </ul>
 </div>
+<div id="alerts" data-id="alerts" data-view="Alert"></div>
 
