OMP-1088: Fixed alerts widget appearing before failing monitors

--- a/dashboards/layout.erb
+++ b/dashboards/layout.erb
@@ -32,6 +32,7 @@
       </div>
       <a href="#saving-instructions" id="save-gridster">Save this layout</a>
     <% end %>
+    <div id="alerts" data-id="alerts" data-view="Alert"></div>
     <script type="application/javascript">
       $(function(){
 
