OMP-1088: Removed alerts on alerts widget when failures have been fixed

--- a/dashboards/layout.erb
+++ b/dashboards/layout.erb
@@ -68,6 +68,7 @@
         };
 
         $.fn.hideScrollingAlert = function(){
+          alertsDiv.find('marquee').empty(); // Remove all existing alerts
           alertsDiv.css('display', 'none');
         };
 
