OMP-1088: removed changes on layout.erb, moved all to one-membership dashboard; Fixed failure overlay monitors

--- a/dashboards/gold.erb
+++ b/dashboards/gold.erb
@@ -1,6 +1,5 @@
 <% content_for :title do %>One Membership Dashboard<% end %>
-<% content_for :tier do %>Gold<% end %>
-
+<div id="tier">Gold Tier</div>
 <div class="gridster">
   <ul>
     <h4>Acceptance Tests</h4>
