--- a/dashboards/platinum.erb
+++ b/dashboards/platinum.erb
@@ -1,6 +1,5 @@
-<% content_for :title do %>One Membership Dashboard<% end %>
-<% content_for :tier do %>Platinum<% end %>
-
+<% content_for :title do %>One Membership Dashboard - Platinum<% end %>
+<div id="tier">Platinum Tier</div>
 <div class="gridster">
   <ul>
     <h4>Acceptance Tests</h4>
