OMP-1088: Fixed alert monitor overlay and scrolling alert not displaying bug

--- a/dashboards/one-membership.haml
+++ b/dashboards/one-membership.haml
@@ -36,6 +36,7 @@
     });
 
   #alerts{:data => {:id => "alerts", :view => "Alert"}}
+    %marquee.tab.blink{:behavior => "scroll", :direction => "left", :scrollamount => "15"}
 
   :javascript
     $(function(){
