--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -154,22 +154,14 @@ ul > h4 {
 // ----------------------------------------------------------------------------
 
 #tier {
-  color: #E5E4E2;
-  font-size: 50px;
-  text-align: center;
-  /*stitching*/
-  outline: 1px dashed #98abb9;
-  outline-offset: -5px;
-
-  background-color: #556068;
-  height: auto;
-  width: 350px;
-
-  /*shadow*/
-  -webkit-box-shadow: 2px 2px 2px #000;
-  -moz-box-shadow: 2px 2px 2px #000;
-  box-shadow: 2px 2px 2px #000;
+  background-color: blue;
+  width: 100%;
   margin: auto;
+  height: 50px;
+  color: white;
+  font-size: xx-large;
+  font-weight: bolder;
+  padding-left: 50px;
 }
 
 #overlay {
